Updated user login documentation and added a function wrapper to user login db call.
